--- a/Intrusion_Detection_System_[NSL_KDD].ipynb
+++ b/Intrusion_Detection_System_[NSL_KDD].ipynb
@@ -33,23 +33,12 @@
       "isGpuEnabled": false
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat_minor": 0,
   "nbformat": 4,
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/NIKK-666/AI-hackfest/blob/main/Intrusion_Detection_System_%5BNSL_KDD%5D.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
